--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "private": true,
-  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "react-scripts build",
-    "serve": "react-scripts start",
+    "test": "react-app-rewired test",
     "lint": "eslint --fix --ext .js,.jsx ./src",
-    "format": "prettier --write ./src",
-    "test": "vitest"
+    "format": "prettier --write ./src"
   },
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -20,13 +18,14 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^27.5.1",
     "jsdom": "^24.1.1",
     "prettier": "^3.3.3",
+    "react-app-rewired": "^2.2.1",
     "react-scripts": "^5.0.0",
     "vitest": "^2.0.5"
   },
